--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -37,7 +37,7 @@
 .bg-content{
   position: absolute;
   height: auto;
-  width: 33em;
+  width: 100%;
   left: 50%;
   top: 50%;
   z-index: 1;
@@ -297,5 +297,19 @@
 
   .bg-vid-wrapper h1 {
     font-size: 3em;
+  }
+}
+
+
+
+@media only screen and (max-device-width: 1000px){
+
+  .bg-vid-wrapper {
+    background-size: cover;
+    background-image: url("/images/backgrounds/static_welcome_bg.png");
+  }
+
+  .bg-vid{
+    visibility: hidden;
   }
 }
