Added real experiences to seed file; other minor fixes

--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -131,7 +131,7 @@
 
           <div class="col span_2">
             <%= f.label(:pf_image_3, 'Image 3:') %>
-            <%= f.file_field(:pf_image_3, class: 'file-input') %>
+            <%= f.file_field(:pf_image_3, class: 'file-input') %><br />
             <img class="upload-preview" src="/images/empty-pf-image.png" />
           </div>
 
