--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,7 +19,7 @@
           </div>
         </div>
         <div class="step-txt">
-          <h4>1. Create a profile for your kids!</h4>
+          <h4>1. Create a profile for your kids</h4>
         </div>
       </div>
       <div class="how-step col span_3">
@@ -41,7 +41,7 @@
           </div>
         </div>
         <div class="step-txt">
-          <h4>3. Plan the date - pick a time, movie, restaurant, etc.</h4>
+          <h4>3. Plan the date and purchase one of our hand-picked experiences, like a wine & cheese tasting or chocolate making class</h4>
         </div>
       </div>
       <div class="how-step col span_3">
