--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar">
-  <div class="logo"><a href="/">Bring Home to Mom</a></div>
+  <div class="logo"><a href="/">Date Planning</a></div>
   <ul>
     <% if user_signed_in? %>
     <li class="notification">
