--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div class="welcome-page-container">
   <div class="bg-vid-wrapper">
     <div class="bg-content">
-      <h1>Bring Home To Mom</h1>
+      <h1>Date Planning</h1>
       <a href="#how-it-works" class="how-btn">How it Works</a>
     </div>
     <video class = "bg-vid" autoplay loop>
