--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bring Home To Mom</title>
+  <title>Date Planning</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <!-- [TODO]: DOWNLOAD FONTS AND INCLUDE IN ASSET PIPELINE -->
   <link href='http://fonts.googleapis.com/css?family=Questrial|Lato:300,400|Arvo:400,700|Josefin+Sans:300,400,600,700|Vollkorn|Open+Sans:400,700,600,300,800|Montserrat:400,700|Lobster:400|Signika:400,600,700|Raleway:400,800,900,700,600,500' rel='stylesheet' type='text/css'>
