--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -33,8 +33,8 @@
           </div>
 
           <div class="col span_6">
-            <%= f.label(:state, 'State:') %><br />
-            <%= f.select(:state, options_for_select(us_states), include_blank: true) %><br />
+            <%= f.label(:state, 'Country:') %><br />
+            <%= f.text_field(:state) %><br />
           </div>
         </div>
 
